Font Poppins added and set as default font

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,7 +57,10 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
-
+  fonts:
+    - family: Poppins
+      fonts:
+        - asset: lib/ui/assets/fonts/Poppins-*.ttf
   assets:
     - lib/ui/assets/animations/bb8-loading.json
     
