--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,10 @@ dependencies:
   # Animations
   lottie: ^1.0.1
 
+  # Storage
+  hive: ^2.0.2
+  hive_flutter: ^1.0.0
+
   # Route management
   fluro: ^2.0.3
 
@@ -38,11 +42,17 @@ dependencies:
   # State management
   mobx: ^2.0.1
   flutter_mobx: ^2.0.0
+  
+  # State network
+  connectivity: ^3.0.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   
+  # Storage
+  hive_generator: ^1.0.1
+
   # State management
   mobx_codegen: ^2.0.1+2
 
