--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   # Storage
   hive: ^2.0.2
   hive_flutter: ^1.0.0
+  path_provider: ^2.0.1
 
   # Route management
   fluro: ^2.0.3
